no errors but not working

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -17,7 +17,8 @@
     "default_popup": ""
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval' http://localhost:* http://127.0.0.1:*; object-src 'self'"
