FINALLY it's working !

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -17,10 +17,9 @@
     "default_popup": ""
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval' http://localhost:* http://127.0.0.1:*; object-src 'self'"
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval' http://localhost:* http://127.0.0.1:* ; object-src 'self'"
   }
 }
