--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,16 +1,13 @@
 {
   "manifest_version": 3,
   "name": "Save my Phind",
-  "version": "0.6",
-  "description": "Export your Phind conversation to a markdown file",
+  "version": "0.7",
+  "description": "Export your Phind.com conversation to a markdown file",
   "icons": {
     "128": "img/logo_128.png"
   },
   "permissions": [
     "scripting", "activeTab"
-  ],
-  "host_permissions": [
-    "http://*.phind.com/*", "https://*.phind.com/*"
   ],
   "action": {
     "default_icon": "img/logo.png",
