--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -9,6 +9,9 @@
   "permissions": [
     "scripting", "activeTab"
   ],
+  "host_permissions": [
+    "http://*.phind.com/*", "https://*.phind.com/*"
+  ],
   "action": {
     "default_icon": "img/logo.png",
     "default_popup": ""
