--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Save my Phind",
+  "name": "Save my Phind - AI Conversation Exporter",
   "version": "0.9",
   "description": "Export your Phind.com threads into markdown files!",
   "icons": {
