--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Save my Phind - AI Conversation Exporter",
-  "version": "0.12.2",
-  "description": "Export your Phind.com threads into markdown files!",
+  "version": "0.12.3",
+  "description": "🚀 Export your Phind.com threads into markdown files!\n",
   "icons": {
     "128": "img/logo_128.png"
   },
