--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Save my Phind - AI Conversation Exporter",
   "version": "0.13.2",
-  "description": "🚀 Export your Phind.com threads into markdown files!\n",
+  "description": "🚀 Export your Phind.com search threads into markdown files!\n",
   "icons": {
     "128": "img/logo_128.png"
   },
