--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "esbuild": "^0.18.11"
   },
   "dependencies": {
+    "dompurify": "^3.0.4",
     "fs-extra": "^11.1.1",
-    "glob": "^10.3.1"
+    "glob": "^10.3.1",
+    "turndown": "^7.1.2"
   }
 }
