--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "node manage/prebuild.js && esbuild js/background.js --bundle --minify --outdir=dist && esbuild js/main.js --bundle --minify --outdir=dist && node manage/postbuild.js",
+    "licenses": "nlf -d > licenses.md && node manage/updateLicenses.js",
+    "build": "node manage/prebuild.js && esbuild src/background.js --bundle --minify --outdir=dist && esbuild src/main.js --bundle --minify --outdir=dist && node manage/postbuild.js",
     "chrome": "convert-manifest-format --chrome && npm run build",
     "firefox": "convert-manifest-format --firefox && npm run build"
   },
@@ -11,7 +12,6 @@
   "dependencies": {
     "dompurify": "^3.0.4",
     "fs-extra": "^11.1.1",
-    "glob": "^10.3.1",
     "turndown": "^7.1.2"
   }
 }
