--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "version": "1.0.0",
+  "license": "SaveMyPhind License",
   "scripts": {
-    "licenses": "nlf -d > licenses.md && node manage/updateLicenses.js",
+    "licenses": "nlf -d > licenseList.md",
     "build": "node manage/prebuild.js && esbuild src/background.js --bundle --minify --outdir=dist && esbuild src/main.js --bundle --minify --outdir=dist && node manage/postbuild.js",
     "chrome": "convert-manifest-format --chrome && npm run build",
     "firefox": "convert-manifest-format --firefox && npm run build"
