--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "updateLicences": "npm run syncVersion && npm run licenses",
     "build": "node manage/initBuild.js && esbuild src/background.js --bundle --minify --outdir=dist && esbuild src/main.js --bundle --minify --outdir=dist",
     "all": "npm updateLicences && npm run build",
-    "chrome": "convert-manifest-format --chrome && npm run build",
-    "firefox": "convert-manifest-format --firefox && npm run build",
+    "chrome": "npm run convert chrome && npm run build",
+    "firefox": "npm run convert firefox && npm run build",
     "zip": "node manage/zip.js",
-    "prod": "npm run updateLicences && npm run chrome && npm run zip && npm run firefox && npm run zip"
+    "prod": "npm run updateLicences && npm run chrome && npm run zip && npm run firefox && npm run zip",
+    "convert": "node manage/convertManifest.js",
+    "watch": "nodemon --exec npm run build --watch"
   },
   "devDependencies": {
-    "convert-manifest-format": "^0.4.0",
-    "esbuild": "^0.18.11"
+    "esbuild": "^0.18.11",
+    "fs-extra": "^11.1.1"
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
     "dompurify": "^3.0.4",
-    "fs-extra": "^11.1.1",
+    "nodemon": "^2.0.22",
     "turndown": "^7.1.2"
   }
 }
