--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,8 +18,6 @@
     "default_icon": "img/logo.png"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "background.js"
   }
 }
