--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "devDependencies": {
     "esbuild": "^0.18.11",
-    "fs-extra": "^11.1.1",
-    "nlf": "^2.1.1"
+    "fs-extra": "^11.1.1"
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
