--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Save my Phind - AI Conversation Exporter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "🚀 Export your Phind.com search threads into markdown files!\n",
   "icons": {
     "128": "img/logo_128.png"
@@ -18,6 +18,8 @@
     "default_icon": "img/logo.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "scripts": [
+      "background.js"
+    ]
   }
 }
