update manifest : Firefox check

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,5 +21,11 @@
     "scripts": [
       "background.js"
     ]
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "savemyphind@hugocollin.com",
+      "strict_min_version": "109.0"
+    }
   }
 }
