--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,14 @@
 {
   "manifest_version": 3,
   "name": "Save my Phind - AI Conversation Exporter",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "description": "🚀 Export your Phind.com search threads into markdown files!\n",
   "icons": {
     "128": "img/logo_128.png"
   },
   "permissions": [
     "scripting",
-    "activeTab"
+    "tabs"
   ],
   "host_permissions": [
     "http://*.phind.com/*",
