--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Save my Phind - AI Conversation Exporter",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "🚀 Export your Phind.com search threads into markdown files!\n",
   "icons": {
     "16": "img/icons/icon-16.png",
@@ -15,8 +15,7 @@
     "tabs"
   ],
   "host_permissions": [
-    "http://*.phind.com/*",
-    "https://*.phind.com/*"
+    "<all_urls>"
   ],
   "action": {
     "default_icon": "img/icons/icon-500.png"
