--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "prod": "npm run licenseList && npm run firefox && npm run zip && npm run chrome && npm run zip"
   },
   "devDependencies": {
+    "adm-zip": "^0.5.10",
     "esbuild": "^0.18.11",
     "fs-extra": "^11.1.1",
     "nodemon": "^2.0.22",
-    "adm-zip": "^0.5.10"
+    "license-checker": "^25.0.1"
   },
   "dependencies": {
     "dompurify": "^3.0.4",
