--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Save my Phind - AI Conversation and Web Exporter",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "🚀 Export your Phind.com search threads into markdown files!\n",
   "icons": {
     "16": "img/icons/icon-16.png",
@@ -16,7 +16,7 @@
     "https://*.phind.com/*"
   ],
   "action": {
-    "default_icon": "img/icons/icon_web-500.png"
+    "default_icon": "img/icons/icon_disabled-500.png"
   },
   "background": {
     "service_worker": "background.js"
