--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "licenseList": "npm run syncVersion && npm run licenses",
     "chrome": "npm run convert chrome && npm run build",
     "firefox": "npm run convert firefox && npm run build",
-    "build": "node manage/initBuild.js && esbuild src/background.js --bundle --outdir=dist && esbuild src/main.js --bundle --outdir=dist && esbuild src/script.js --bundle --outdir=dist",
+    "build": "node manage/initBuild.js && esbuild src/background.js --bundle --outdir=dist && esbuild src/main.js --bundle --outdir=dist && esbuild src/script.js --bundle --outdir=dist && esbuild src/contentScript.js --bundle --outdir=dist",
     "watch": "nodemon --exec npm run build --watch",
     "prod": "npm run licenseList && npm run firefox && npm run zip && npm run chrome && npm run zip"
   },
@@ -21,11 +21,12 @@
     "adm-zip": "^0.5.10",
     "esbuild": "^0.18.11",
     "fs-extra": "^11.1.1",
-    "nodemon": "^2.0.22",
-    "license-checker": "^25.0.1"
+    "license-checker": "^25.0.1",
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "dompurify": "^3.0.4",
+    "puppeteer": "^20.9.0",
     "turndown": "^7.1.2"
   }
 }
