--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,6 +21,12 @@
   "background": {
     "service_worker": "background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    }
+  ],
   "web_accessible_resources": [
     {
       "resources": [
