need to integrate and test the solution

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,8 @@
   },
   "permissions": [
     "scripting",
-    "activeTab"
+    "activeTab",
+    "webNavigation"
   ],
   "host_permissions": [
     "https://*.phind.com/*"
