--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,12 +20,18 @@
     "default_icon": "img/icons/icon_disabled-500.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "scripts": [
+      "background.js"
+    ]
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "contentScript.js"
+      ]
     }
   ],
   "web_accessible_resources": [
@@ -38,5 +44,11 @@
         "<all_urls>"
       ]
     }
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "savemyphind@hugocollin.com",
+      "strict_min_version": "109.0"
+    }
+  }
 }
