--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Save my Phind - AI Conversation Exporter",
-  "version": "1.8.12",
+  "version": "1.8.13",
   "description": "🚀 Export your Phind.com search threads into markdown files!\n",
   "icons": {
     "16": "img/icons/icon-16.png",
@@ -28,7 +28,7 @@
         "*://*.phind.com/*"
       ],
       "js": [
-        "contentScript.js"
+        "main.js"
       ]
     }
   ],
