--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Save My AI - Phind and Perplexity Exporter",
+  "name": "Save my Chatbot - Phind and Perplexity Exporter",
   "version": "2.0.7",
   "description": "🚀 Export your Phind.com and Perplexity.ai search threads into markdown files!\n",
   "icons": {
