--- a/src/manifest.json
+++ b/src/manifest.json
@@ -26,7 +26,8 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*.phind.com/*"
+        "*://*.phind.com/*",
+        "*://*.perplexity.ai/*"
       ],
       "js": [
         "main.js"
