--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "save-my-phind",
-  "version": "1.9.18",
+  "version": "2.1.4",
   "license": "RMD-C v1.0 License",
   "scripts": {
     "syncVersion": "node manage/syncVersions.js",
@@ -15,7 +15,9 @@
     "firefox": "npm run convert firefox && npm run build",
     "build": "node manage/initBuild.js && esbuild src/background.js --bundle --outdir=dist && esbuild src/main.js --bundle --outdir=dist",
     "watch": "nodemon --exec npm run build --watch",
-    "prod": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip && npm run chrome && node manage/prodChanges.js && npm run zip"
+    "prod": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip && npm run chrome && node manage/prodChanges.js && npm run zip && node manage/devChanges.js"
+    "prodChrome": "npm run licenseList && npm run chrome && node manage/prodChanges.js && npm run zip",
+    "prodFirefox": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip"
   },
   "devDependencies": {
     "adm-zip": "^0.5.10",
