--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Save my Chatbot - Phind & Perplexity Exporter",
-  "version": "2.1.10",
+  "version": "2.2.0",
   "description": "🚀 Export your Phind.com and Perplexity.ai search threads into markdown files!",
   "icons": {
     "16": "assets/icons/icon-16.png",
@@ -15,7 +15,8 @@
   ],
   "host_permissions": [
     "*://*.phind.com/*",
-    "*://*.perplexity.ai/*"
+    "*://*.perplexity.ai/*",
+    "*://*.google.com/*"
   ],
   "action": {
     "default_icon": "assets/icons/icon_disabled-500.png"
@@ -27,7 +28,8 @@
     {
       "matches": [
         "*://*.phind.com/*",
-        "*://*.perplexity.ai/*"
+        "*://*.perplexity.ai/*",
+        "*://*.google.com/*"
       ],
       "js": [
         "main.js"
