--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Save my Chatbot - AI Conversation Exporter",
   "version": "2.2.8",
-  "description": "🚀 Export your Phind, Perplexity and MaxAI on Google search threads into markdown files!",
+  "description": "🚀 Export your Phind, Perplexity and MaxAI-Google search threads into markdown files!",
   "icons": {
     "16": "assets/icons/icon-16.png",
     "48": "assets/icons/icon-48.png",
