--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@types/jest": "^29.5.11",
     "adm-zip": "^0.5.10",
+    "babel-jest": "^29.7.0",
     "chrome-remote-interface": "^0.33.0",
     "esbuild": "^0.18.11",
     "fs-extra": "^11.1.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "license-checker": "^25.0.1",
     "nodemon": "^2.0.22",
     "selenium-webdriver": "^4.15.0"
