--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chrome-remote-interface": "^0.33.0",
     "esbuild": "^0.18.11",
     "fs-extra": "^11.1.1",
+    "gcp-refresh-token": "^0.9.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
