--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build extension
         run: npm run prod
 
+      - name: Prepare source code zip
+        run: zip -r releases/save-my-phind_${{ github.run_number }}_firefox_source.zip src/
+
       - name: Browser Platform Publish
         uses: PlasmoHQ/bpp@v3.6.1
         with:
