--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "save-my-phind",
-  "version": "2.6.2",
+  "version": "2.6.3",
   "license": "RMD-C v1.0 License",
   "scripts": {
+    "--- Node scripts": "---",
     "syncVersion": "node manage/syncVersions.js",
     "licenses": "node manage/listLicenses.js",
-    "all": "npm run updateLicences && npm run build",
-    "watchAll": "nodemon --exec npm run all --watch",
     "convert": "node manage/convertManifest.js",
     "zip": "node manage/zip.js",
-    "---": "---",
     "licenseList": "npm run syncVersion && npm run licenses",
+    "--- Browser-specific scripts": "-----",
     "chrome": "npm run convert chrome && npm run build",
     "firefox": "npm run convert firefox && npm run build",
-    "build": "node manage/initBuild.js && esbuild src/scripts/background/background.js --bundle --outdir=dist && esbuild src/scripts/content/tab.js --bundle --outdir=dist",
-    "watch": "nodemon --exec npm run build --watch",
-    "prod": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip && npm run chrome && node manage/prodChanges.js && npm run zip && node manage/devChanges.js",
     "prodChrome": "npm run licenseList && npm run chrome && node manage/prodChanges.js && npm run zip",
     "prodFirefox": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip",
+    "--- Build scripts": "---",
+    "build": "node manage/initBuild.js && esbuild src/scripts/background/background.js --bundle --outdir=dist && esbuild src/scripts/content/tab.js --bundle --outdir=dist",
+    "build:l": "npm run licenseList && npm run build",
+    "build:w": "nodemon --exec npm run build --watch",
+    "watchAll": "nodemon --exec npm run all --watch",
+    "--- Prod scripts": "---",
+    "preprod": "npm run licenseList",
+    "prod": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip && npm run chrome && node manage/prodChanges.js && npm run zip && node manage/devChanges.js",
+    "--- Test scripts": "---",
     "test": "jest"
   },
   "devDependencies": {
