--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,3 +30,28 @@ jobs:
         uses: PlasmoHQ/bpp@v3.6.1
         with:
           keys: ${{ secrets.BPP_KEYS }}
+
+      - name: Create Tag
+        run: git tag v${{ steps.package_version.outputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push Tag
+        run: git push origin v${{ steps.package_version.outputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.package_version.outputs.version }}
+          release_name: v${{ steps.package_version.outputs.version }}
+          body: "Automatically generated release notes"
+          draft: true
+          prerelease: false
+          discussion_category_name: "Releases"
+          files: |
+            releases/save-my-phind_${{ github.run_number }}_chrome.zip
+            releases/save-my-phind_${{ github.run_number }}_firefox.zip
