--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Prepare source code zip
         run: zip -r releases/save-my-phind_${{ github.run_number }}_firefox_source.zip src/
 
-      - name: Browser Platform Publish
-        uses: PlasmoHQ/bpp@v3.6.1
-        with:
-          keys: ${{ secrets.BPP_KEYS }}
+#      - name: Browser Platform Publish
+#        uses: PlasmoHQ/bpp@v3.6.1
+#        with:
+#          keys: ${{ secrets.BPP_KEYS }}
 
       - name: Create Tag
         run: git tag v${{ steps.package_version.outputs.version }}
