--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,10 @@ jobs:
 #        with:
 #          keys: ${{ secrets.BPP_KEYS }}
 
+      - name: Get version from package.json
+        id: package_version
+        run: echo "::set-output name=version::$(node -p "require('./package.json').version")"
+
       - name: Create Tag
         run: git tag v${{ steps.package_version.outputs.version }}
         env:
