--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,5 +57,5 @@ jobs:
           prerelease: false
           discussion_category_name: "Releases"
           files: |
-            releases/save-my-phind_${{ github.run_number }}_chrome.zip
-            releases/save-my-phind_${{ github.run_number }}_firefox.zip
+            releases/save-my-phind_${{ steps.package_version.outputs.version }}_chrome.zip
+            releases/save-my-phind_${{ steps.package_version.outputs.version }}_firefox.zip
