--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,15 @@ jobs:
         id: package_version
         run: echo "::set-output name=version::$(node -p "require('./package.json').version")"
 
+      - name: Get last tag
+        id: get_last_tag
+        run: echo "::set-output name=tag::$(git describe --tags --abbrev=0)"
+
+      - name: Generate release notes
+        id: generate_release_notes
+        run: |
+          echo "::set-output name=notes::$(git log ${{ steps.get_last_tag.outputs.tag }}..HEAD --pretty=format:'* %s (%h)' --reverse)"
+
       - name: Create Tag
         run: git tag v${{ steps.package_version.outputs.version }}
         env:
@@ -53,10 +62,10 @@ jobs:
         with:
           tag_name: v${{ steps.package_version.outputs.version }}
           release_name: v${{ steps.package_version.outputs.version }}
-          body: "Automatically generated release notes"
+          body: ${{ steps.generate_release_notes.outputs.notes }}
           draft: true
           prerelease: false
-          discussion_category_name: "Announcements"
+          discussion_category_name: "Releases"
 
       - name: Upload Release Asset Chrome
         uses: actions/upload-release-asset@v1
