feat: customize changelog builder

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,6 +50,9 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEMPLATE_HEADER: '## What''s Changed\n'
+          TEMPLATE_ENTRY: '* {{TITLE}} by @{{AUTHOR}} in {{URL}}\n'
+          TEMPLATE_EMPTY_CHANGESET: '**Full Changelog**: {{COMPARE_URL}}\n'
 
       - name: Create Release
         id: create_release
