--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,16 +53,21 @@ jobs:
         with:
           configurationJson: |
             {
-              "template": "## What's Changed\n{{#each mergedPullRequests}}\n* {{this.title}} by @{{this.user.login}} in {{this.html_url}}\n{{/each}}\n\n**Full Changelog**: {{compareUrl}}"
+              "categories": [
+                {
+                  "title": "## What's Changed"
+                }
+              ],
+              "template": {
+                "release": {
+                  "changes": "* {{capitalize title}} by @{{author.username}} in {{url}}\n"
+                },
+                "change": "* {{capitalize title}} by @{{author.username}} in {{url}}",
+                "group": "{{capitalize title}}\n{{#each changes}}{{{this}}}\n{{/each}}",
+                "mainTemplate": "{{#each groups}}{{{this}}}\n{{/each}}**Full Changelog**: {{compareUrl}}"
+              }
             }
-#          configuration: |
-#            template: |
-#              ## What's Changed
-#              {{#each mergedPullRequests}}
-#              * {{capitalizeFirstLetter this.title}} by @{{this.user.login}} in {{this.html_url}}
-#              {{/each}}
-#
-#              **Full Changelog**: {{compareUrl}}
+
 
       - name: Create Release
         id: create_release
