--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,10 +53,17 @@ jobs:
         with:
           configurationJson: |
             {
-              "template": "## What's Changed\n{{#each mergedPullRequests}}\n* {{this.title}} by @{{this.user.login}} in {{this.html_url}}\n{{/each}}\n\n**Full Changelog**: {{compareUrl}}"
+              "template": "# What's Changed\n{{#each mergedPullRequests}}\n* {{this.title}} by @{{this.author}} in {{this.url}}\n{{/each}}\n\n**Full Changelog**: {{compareUrl}}",
               "categories": [
                 {
-                  "title": "## What's Changed"
+                  "title": "## What's Changed",
+                  "labels": ["fix", "feat", "refactor", "chore"]
+                }
+              ],
+              "label_extractor": [
+                {
+                  "pattern": "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\\([\\w\\-\\.]+\\))?(!)?: ([\\w ])+([\\s\\S]*)",
+                  "target": "$1"
                 }
               ]
             }
